objects/Order_Ops_Processing__c/Order_Ops_Processing__c.object-meta.xml
<CustomObject>
    <description>Captures Order Ops Processing details to move away from a manual tracker that the team currently uses.</description>
    <label>Order Ops Processing</label>
    <nameField>
        <displayFormat>OPS-{00000}</displayFormat>
        <label>Order Ops Processing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Ops Processing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>