objects/Order_Ops_Processing__c/fields/Delivery_Delayed__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Delayed__c</fullName>
    <description>Used by Order Ops</description>
    <label>Delivery Delayed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>