objects/Order_Ops_Processing__c/fields/Exception_Approved__c.field-meta.xml
<CustomField>
    <fullName>Exception_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Order Ops to track an exception has been approved for this opportunity.</description>
    <label>Exception Approved</label>
    <type>Checkbox</type>
</CustomField>