objects/Order_Ops_Processing__c/fields/Exception_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exception_Reason__c</fullName>
    <description>Captures the reason for an exception.</description>
    <label>Exception Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7 day</fullName>
            </value>
            <value>
                <fullName>Early Booking</fullName>
            </value>
            <value>
                <fullName>NARR</fullName>
            </value>
            <value>
                <fullName>Delayed Billing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>