objects/Order_Ops_Processing__c/fields/License_Approved_for_Delivery__c.field-meta.xml
<CustomField>
    <fullName>License_Approved_for_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies that Order Ops has approved license delivery</description>
    <label>License Approved for Delivery</label>
    <type>Checkbox</type>
</CustomField>