objects/Order_Ops_Processing__c/fields/License_ID__c.field-meta.xml
<CustomField>
    <fullName>License_ID__c</fullName>
    <description>Used by Order Ops to enter in the License ID for the order.</description>
    <label>License ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>