objects/Order_Ops_Processing__c/fields/License_Staged_for_Delivery__c.field-meta.xml
<CustomField>
    <fullName>License_Staged_for_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies that Order Ops has staged license delivery</description>
    <label>Cloud License Scheduled</label>
    <type>Checkbox</type>
</CustomField>