objects/Order_Ops_Processing__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The opportunity that the Order Ops Processing record is associated with.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Order Ops Processing</relationshipLabel>
    <relationshipName>Order_Ops_Processing</relationshipName>
    <type>Lookup</type>
</CustomField>