objects/Order_Ops_Processing__c/fields/Portal_Invoice_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Portal_Invoice_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures whether the order requires portal invoice delivery.</description>
    <label>Portal Invoice Delivered</label>
    <type>Checkbox</type>
</CustomField>