objects/Order_Ops_Processing__c/fields/Processor__c.field-meta.xml
<CustomField>
    <fullName>Processor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The order ops user that’s responsible for processing the deal. Manually populated by the Order Ops team.</description>
    <label>Processor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Order_Ops_Processing</relationshipName>
    <type>Lookup</type>
</CustomField>