objects/Order_Ops_Processing__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The order ops user that’s responsible for reviewing the deal. Manually populated by the Order Ops team.</description>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Order_Ops_Processing1</relationshipName>
    <type>Lookup</type>
</CustomField>