objects/Order_Ops_Processing__c/fields/Reviewer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Notes__c</fullName>
    <description>Used by Order Ops for notes from the reviewer</description>
    <label>Reviewer Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>