objects/Order_Ops_Processing__c/validationRules/Hold_Reason_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Hold_Reason_is_Required</fullName>
    <active>true</active>
    <description>Requires a Hold Reason to be selected when the Review Status is set to Hold. Requires a Hold Reason to be selected when the Review Status is set to Hold.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Review_Status__c, &quot;Hold&quot;),
    ISPICKVAL(Hold_Reason__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Hold_Reason__c</errorDisplayField>
    <errorMessage>Hold Reason is required when Review Status is set to Hold.</errorMessage>
</ValidationRule>