objects/Order_Ops_Processing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Processor__c</columns>
    <columns>Reviewed_By__c</columns>
    <columns>Review_Status__c</columns>
    <columns>License_Approved_for_Delivery__c</columns>
    <columns>License_Staged_for_Delivery__c</columns>
    <columns>License_Delivery_Date__c</columns>
    <columns>Processing_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>